Thu Aug 28 13:04:15 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/auto_run_tests.pl:
          The error when we can't chdir to a directory was confusing

        * bin/PerlACE/ProcessVX.pm:
        * bin/PerlACE/ProcessVX_Unix.pm:
        * bin/PerlACE/ProcessVX_Win32.pm:
          Reduced duplicate code and added support for ACE_RUN_VX_STARTUP_SCRIPT
          and ACE_RUN_VX_STARTUP_SCRIPT_ROOT with which we can specify a
          startup script that is executed before the real application is started

        * bin/PerlACE/TestTarget_VxWorks.pm:
          A VxWorks target has to be rebooted between tests

Mon Aug 25 11:15:15 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/tao_other_tests.lst:
          Added missing run_test.pl to the OBV/Typed_Events test

Thu Aug 21 09:38:15 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * docs/Download.html:
          Added OpenSuSE build services as new rpm download location.
          Removed ACE-install.sh reference, it is not part of the
          archive anymore

Thu Aug 21 06:54:15 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/MakeProjectCreator/templates/gnu.mpd:
          Also check /usr/lib64 for the libs

        * bin/depgen.pl:
        * bin/mpc.pl:
        * bin/mwc.pl:
        * bin/PerlACE/ConfigList.pm:
        * bin/PerlACE/MSProject.pm:
        * bin/PerlACE/Process.pm:
        * bin/PerlACE/Process_Unix.pm:
        * bin/PerlACE/Process_VMS.pm:
        * bin/PerlACE/Process_Win32.pm:
        * bin/PerlACE/ProcessLVRT.pm:
        * bin/PerlACE/ProcessVX.pm:
        * bin/PerlACE/ProcessVX_Unix.pm:
        * bin/PerlACE/ProcessVX_Win32.pm:
        * bin/PerlACE/Run_Test.pm:
        * bin/PerlACE/TestTarget.pm:
        * bin/PerlACE/TestTarget_LVRT.pm:
        * bin/PerlACE/TestTarget_VxWorks.pm:
        * bin/Uniqueid.pm:
          Added missing shebang lines to fix rpm packaging warnings
